--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::include_graphics("https://i.imgur.com/BcZ2tfW.png")
 ```
 
 
-## Exporting emissions to atmospheric models
+## Exporting emissions to atmospheric models, eixport: `r packageVersion("eixport")`
 
 Emissions are mass that affects atmosphere in complex ways, not only physical, but also, in the health of humans, ecosystems, economically, etc.
 
