--- a/README.Rmd
+++ b/README.Rmd
@@ -9,8 +9,7 @@
 [![Github Stars](https://img.shields.io/github/stars/atmoschem/eixport.svg?style=social&label=Github)](https://github.com/atmoschem/eixport)
 
 
-
-## Exporting emissions to atmospheric models, **eixport**
+## Exporting emissions to atmospheric models, eixport: `r packageVersion("eixport")`
 
 ![](https://i.imgur.com/BcZ2tfW.png)
 
@@ -21,22 +20,21 @@ This R-Package provide functions to read emissions from [VEIN](https://github.co
 in different formats and export the emissions into the appropiate format suitable to other models.
 
 
-![](https://raw.githubusercontent.com/atmoschem/eixport/master/lights_wrf.png)
 ## Install
 
 To install the [CRAN](https://CRAN.R-project.org/package=eixport) version:
 
-```r
+```{r eval = FALSE}
 install.packages("eixport")
 ```
 
 To install the development version:
 
-```r
+```{r eval = FALSE}
 devtools::install_github("atmoschem/eixport")
 ```
 
-```r
+```{r}
 library(eixport)
 ```
 
