--- a/README.Rmd
+++ b/README.Rmd
@@ -59,6 +59,7 @@ wrf_meta(file = wrf)
 
 ## Some functions:
 
+- [get_edgar](https://atmoschem.github.io/eixport/reference/get_edgar.html): Download EDGAR emissions data.
 - [to_rline](https://atmoschem.github.io/eixport/reference/to_rline.html): Export emissions to other formats
 - [to_wrf](https://atmoschem.github.io/eixport/reference/to_wrf.html):	Combine total/spatial/temporal/split and write emission to file
 - [to_brams_spm](https://atmoschem.github.io/eixport/reference/to_brams_spm.html):	inputs for SPM BRAMS
@@ -71,6 +72,11 @@ wrf_meta(file = wrf)
 - [to_munich](https://atmoschem.github.io/eixport/reference/to_munich.html): To generate inputs for
 MUNICH model.
 
+## Download EDGAR 5
+
+```{r eval = FALSE}
+get_edgar(dataset = "v50_AP", destpath = tempdir(), sector = "TOTALS", year = 2014)
+```
 
 ## Paper accepted on Journal of Open Source Software
 
