--- a/README.Rmd
+++ b/README.Rmd
@@ -28,6 +28,8 @@ knitr::opts_chunk$set(
 
 ![](https://i.imgur.com/BcZ2tfW.png)
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gXt3hOlpYts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
 Emissions are mass that affects atmosphere in complex ways, not only physical, but also, in the health of humans, ecosystems, economically, etc.
 
 There are several models whose inputs are emissions, such as [R-Line](https://www.cmascenter.org/r-line/) or [WRF-Chem](https://ruc.noaa.gov/wrf/wrf-chem/). 
