--- a/README.Rmd
+++ b/README.Rmd
@@ -51,14 +51,6 @@ To install the development version:
 devtools::install_github("atmoschem/eixport")
 ```
 
-```{r}
-library(eixport)
-a <- list.files(
-system.file("extdata", package = "eixport"), full.names = T)
-wrf <- grep(pattern = "d01", x = a, value = T)
-wrf_meta(file = wrf)
-```
-
 ## Some functions:
 
 - [get_edgar](https://atmoschem.github.io/eixport/reference/get_edgar.html): Download EDGAR emissions data.
@@ -67,9 +59,9 @@ wrf_meta(file = wrf)
 - [to_brams_spm](https://atmoschem.github.io/eixport/reference/to_brams_spm.html):	inputs for SPM BRAMS
 - [wrf_profile](https://atmoschem.github.io/eixport/reference/wrf_profile.html): Create spatial profile for WRF-Chem
 - [wrf_create](https://atmoschem.github.io/eixport/reference/wrf_create.html):	Create emission files to the WRF-Chem
-- [wrf_plot](https://atmoschem.github.io/eixport/reference/wrf_plot.html): simple plot for emissions
-- [wrf_get](https://atmoschem.github.io/eixport/reference/wrf_get.html):	Read variables of emission files
-- [wrf_put](https://atmoschem.github.io/eixport/reference/wrf_put.html):	Write variables in emission files
+- [wrf_plot](https://atmoschem.github.io/eixport/reference/wrf_plot.html): simple but useful plot
+- [wrf_get](https://atmoschem.github.io/eixport/reference/wrf_get.html):	Read variables
+- [wrf_put](https://atmoschem.github.io/eixport/reference/wrf_put.html):	Write variables
 - [to_as4wrf](https://atmoschem.github.io/eixport/reference/to_as4wrf.html): Create WRF-Chem inputs using NCL scrip AS4WRF.ncl.
 - [to_munich](https://atmoschem.github.io/eixport/reference/to_munich.html): To generate inputs for
 MUNICH model.
@@ -81,6 +73,25 @@ get_edgar(dataset = "v50_AP", destpath = tempdir(), sector = "TOTALS", year = 20
 ```
 
 check this [video](https://www.youtube.com/embed/gXt3hOlpYts)
+
+
+### Summary
+```{r}
+library(eixport)
+file = paste0(system.file("extdata", package = "eixport"),"/wrfinput_d02")
+wrf_summary(file = file,
+            name = c("XLAT", "XLONG"),
+            fn = "mean")
+
+```
+
+### Attributes as data.frame
+
+```{r}
+file = paste0(system.file("extdata", package = "eixport"),"/wrfinput_d02")
+wrf_meta(file)
+```
+
 
 ## Paper accepted on Journal of Open Source Software
 
