--- a/vignettes/gallery2.Rmd
+++ b/vignettes/gallery2.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Gallery WRF out files 2"
+title: "plot WRF: Temperature"
 author: "Sergio Ibarra-Espinosa"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Gallery WRF out files 2}
+  %\VignetteIndexEntry{plot WRF: Temperature}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
