--- a/README.Rmd
+++ b/README.Rmd
@@ -30,19 +30,17 @@ Emissions are mass that affects atmosphere in complex ways, not only physical, b
 
 There are several models whose inputs are emissions, such as [R-Line](https://www.cmascenter.org/r-line/) or [WRF-Chem](https://ruc.noaa.gov/wrf/wrf-chem/). 
 This R-Package provide functions to read emissions from [VEIN](https://github.com/ibarraespinosa/vein) and from other models 
-in different formats and export the emissions into the appropiate format suitable to other models.
+in different formats and export the emissions into the appropriate format suitable to other models.
 
 
 ## Install
 
 To install the [CRAN](https://CRAN.R-project.org/package=eixport) version:
 
-=(
 
-Currently, not on CRAN, but I am submitting now.
 
 ```{r eval = FALSE}
-#install.packages("eixport")
+install.packages("eixport")
 ```
 
 To install the development version:
